Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -4861,6 +4861,7 @@ booktitle={Phylogenetic Methods and the Prehistory of Languages}
   year = {1996},
   volume = {101},
   pages = {8741--8743},
+  note = {Data used is from version 2.3.7},
   publisher = {{Wiley Online Library}},
   journal = {Journal of Geophysical Research: Solid Earth},
   number = {B4}
@@ -5611,4 +5612,37 @@ Scripts},
   author={McElreath, Richard},
   year={2020},
   publisher={CRC press}
+}
+
+#Running, S., Zhao, M. (2021). MODIS/Aqua Net Primary Production Gap-Filled Yearly L4 Global 500m SIN Grid V061. NASA EOSDIS Land Processes DAAC. Accessed 2023-05-24 from https://doi.org/10.5067/MODIS/MYD17A3HGF.061. Accessed May 24, 2023.
+
+#Running, S., Zhao, M. (2021). MODIS/Terra Net Primary Production Gap-Filled Yearly L4 Global 500m SIN Grid V061. NASA EOSDIS Land Processes DAAC. Accessed 2023-05-24 from https://doi.org/10.5067/MODIS/MOD17A3HGF.061. Accessed May 24, 2023.
+
+
+@misc{running2021modis_terra,
+  author = {Running, Steven and Zhao, Maosheng},
+  title = {{MODIS/Terra Net Primary Production Gap-Filled Yearly L4 Global 500m SIN Grid V061}},
+  year = {2021},
+  howpublished = {{NASA EOSDIS Land Processes DAAC, accessed via the Application for Extracting and Exploring Analysis Ready Samples (AppEEARS)}},
+  note = {{Accessed 2023-05-24 from \url{https://doi.org/10.5067/MODIS/MYD17A3HGF.061}}}
+
+}
+
+@misc{running2021modis_aqua,
+  author = {Running, Steven and Zhao, Maosheng},
+  title = {MODIS/Aqua Net Primary Production Gap-Filled Yearly L4 Global 500m SIN Grid V061},
+  year = {2021},
+  howpublished = {{NASA EOSDIS Land Processes DAAC, accessed via the Application for Extracting and Exploring Analysis Ready Samples (AppEEARS)}},
+  note = {{Accessed 2023-05-24 from \url{https://doi.org/10.5067/MODIS/MYD17A3HGF.061}}}
+}
+
+@techreport{running2015daily,
+  title={MOD17 User’s Guide. Daily GPP and annual NPP (MOD17A2/A3) products NASA Earth Observing System MODIS land algorithm},
+url={https://www.umt.edu/numerical-terradynamic-simulation-group/files/modis/MOD17UsersGuide2015_v3.pdf},
+  author={Running, Steven W and Zhao, Maosheng},
+  institution={Moderate Resolution Imaging Spectroradiometer,The United States of America's National Aeronautics and Space Administration },
+  volume={2015},
+version= {3.0},
+  pages={1--28},
+  year={2015}
 }
