Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -5646,3 +5646,12 @@ version= {3.0},
   pages={1--28},
   year={2015}
 }
+
+@inproceedings{NZSA_overnight_2023,
+author = {Hedvig Skirgård, Ursin Maurus Beeli, Michael Zurmühle and Peter Ranacher},
+title={Grouping islands in the Pacific based on sailing distances makes sense for understanding the region before colonialism},
+year={2023},
+howpublished={Presentation},
+booktitle={Annual conference of the New Zealand Studies Association},
+address={University of Stockholm and University of Turku}
+}
